--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  salomon_bottom_bar: ^3.1.0
+  shared_preferences: ^2.0.8
+  provider: ^6.0.1
+  simple_animations: ^4.0.1
 
 dev_dependencies:
   flutter_test:
