--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.8
   provider: ^6.0.1
   simple_animations: ^4.0.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
