--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,11 +78,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/poppins-Regular.ttf
+
+    - family: Mohave
+      fonts:
+        - asset: fonts/Mohave-Regular.ttf
+        - asset: fonts/Mohave-Bold.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
