--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   simple_animations: ^4.0.1
   http: ^0.13.4
   flutter_spinkit: ^5.1.0
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
@@ -81,18 +82,12 @@ flutter:
   fonts:
     - family: Poppins
       fonts:
-        - asset: fonts/poppins-Regular.ttf
+        - asset: assets/fonts/Poppins/poppins-Regular.ttf
 
     - family: Mohave
       fonts:
-        - asset: fonts/Mohave-Regular.ttf
-        - asset: fonts/Mohave-Bold.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+        - asset: assets/fonts/Mohave/Mohave-Regular.ttf
+        - asset: assets/fonts/Mohave/Mohave-Bold.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
