--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^0.13.4
   flutter_spinkit: ^5.1.0
   flutter_switch: ^0.3.2
+  page_view_dot_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
