--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   flutter_switch: ^0.3.2
   page_view_dot_indicator: ^1.1.0
+  flutter_staggered_grid_view: ^0.4.1
 
 dev_dependencies:
   flutter_test:
