--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,19 @@ dependencies:
   flutter_switch: ^0.3.2
   page_view_dot_indicator: ^1.1.0
   flutter_staggered_grid_view: ^0.4.1
+  cached_network_image: ^3.2.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/saved_articles_image2.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
